# axum-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  postman_collection.json
.github/workflows/: docker-image.yml
.sqlx/: query-c593b3c7efc7e80eb5ddf0b1d340044bf3ac0f7b92cf03d56499e8e8130b26a9.json
docs/: README.md
docs/crates/: README.md  axum.md  chrono.md  dotenvy.md  pingora.md  security.md  serde.md  sqlx.md  thiserror.md  tokio.md  tower-http.md  tower.md  tracing.md  utoipa.md  uuid.md  validator.md
migrations/: 20260106_create_auth_users.sql  20260112_create_refresh_tokens.sql  20260112_create_token_blacklist.sql
pingora_proxy/: Cargo.toml  Dockerfile
pingora_proxy/src/: main.rs
src/: config.rs  main.rs  state.rs
src/handlers/: auth.rs  benchmark.rs  general.rs  mod.rs  user.rs
src/models/: auth.rs  user.rs
src/routes/: auth.rs  benchmark.rs  mod.rs  user.rs
src/utils/: cache.rs  hash.rs  jwt.rs  mod.rs  validation.rs
test/api/: postman_collection.json
