[package]
name = "axum-api"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/arrkpong/axum-api"

# Optimize release builds
[profile.release]
strip = true      # Automatically strip symbols from the binary -> smaller image
opt-level = 3     # Maximum optimization
lto = true        # Link Time Optimization -> smaller & faster
codegen-units = 1 # Slower build, but better optimization

[dependencies]
# Web framework
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1.52.2", features = ["full"] }
tower = { version = "0.5.3", features = ["util", "limit", "timeout", "buffer"] }
tower-http = { version = "0.6.9", features = [
    "cors",
    "trace",
    "timeout",
    "compression-full",
] }
utoipa = { version = "5.5.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
] }

# Cache (Redis-compatible / Dragonfly)
redis = { version = "1.2.1", features = ["tokio-comp", "connection-manager"] }

# Authentication & Security
argon2 = { version = "0.5.3" }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Time
chrono = { version = "0.4.44", features = ["serde"] }

# Utilities
uuid = { version = "1.23.1", features = ["v4", "serde"] }
dotenvy = { version = "0.15.7" }
thiserror = { version = "2.0.18" }

# Logging
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
async-trait = "0.1.89"
