[package]
name = "pingora_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
pingora = { version = "0.6.0", features = ["lb"] }
async-trait = { version = "0.1.89" }
tokio = { version = "1.49.0", features = ["full"] }
env_logger = { version = "0.11.8" }
log = { version = "0.4.29" }

# Optimize release builds
[profile.release]
strip = true        # Automatically strip symbols -> smaller binary
lto = true          # Link Time Optimization -> smaller & faster
opt-level = 3       # Maximum optimization
codegen-units = 1   # Maximize optimization (slower build)
